--- a/frontend/index.html
+++ b/frontend/index.html
@@ -244,7 +244,7 @@
 
                <div class="twelve columns">
 
-                  <h3>Senior Cloud Developer</h3>
+                  <h3>Technical Lead - Azure</h3>
                   <p class="info">Tata Consultancy Service Ltd<span>&bull;</span> <em class="date">
                         2019 - Present</em></p>
 
@@ -263,7 +263,7 @@
 
                <div class="twelve columns">
 
-                  <h3>Technical Lead</h3>
+                  <h3>.NET Developer - USA</h3>
                   <p class="info">Tata Consultancy Services Ltd <span>&bull;</span> <em class="date">2017 - 2019</em>
                   </p>
 
