--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
 
             <h2>ABOUT ME</h2>
 
-            <p> Hi, I'm Muthukrishnan Ramasamy, <span>Cloud Developer at <a>Tata Consultancy
+            <p> Hi, I'm Muthukrishnan R, <span>Cloud Developer at <a>Tata Consultancy
                      Services</a></span>. <span> My Area of Expertise is around <a>Microsoft Azure ☁
                      Services</a></span>.
                <span>
