--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,19 +95,19 @@
             <h2>ABOUT ME</h2>
 
             <p> Hi, I'm Muthukrishnan Ramasamy, <span>Cloud Developer at <a>Tata Consultancy
-                     Services</a></span>. <span> My Area of Expertise is <a>Microsoft Azure ☁
-                     Services</a></span>.
+                     Services</a></span>. <a> A Cloud
+                        Enthusiast</a>
+                     </span> focused on desiging and developing
+                     better solutions in cloud.
                <span>
                   </br>
                   </br>
-                  <a> Cloud
-                     Enthusiast</a>
-               </span> focused on desiging and developing
-               better solutions in cloud.
-
-               </br>
-               </br>
-               I built this page as part of the <span><a href="https://github.com/madebygps/cgc-azure-resume">Cloud Guru
+                  <span> My Area of Expertise is <a>Microsoft Azure ☁
+                        Services</a></span>.
+                  </br>
+                  </br>
+                  I built this page as part of the <span>
+                     <!--<a href="https://github.com/madebygps/cgc-azure-resume">-->Cloud Guru
                      Azure Resume Challenge.</a></span>
 
 
